[package]
name = "stdout-channel"
version = "0.3.1"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deadqueue = "0.2"
tokio = {version="1.2", features=["io-std", "io-util", "sync", "rt-multi-thread"]}
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.2.0", features=["postgres_types"] }

[dev-dependencies]
tokio = {version="1.2", features=["rt-multi-thread", "macros"]}
