[package]
name = "stdout-channel"
version = "0.4.5"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
description = "Write stdout to an async queue."
license-file = "LICENSE"
homepage = "https://github.com/ddboline/stdout-channel-rs"
repository = "https://github.com/ddboline/stdout-channel-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deadqueue = "0.2"
tokio = {version="1.13", features=["io-std", "io-util", "sync", "rt-multi-thread", "time"]}

[dev-dependencies]
tokio = {version="1.13", features=["rt-multi-thread", "macros"]}
stack-string = { version="0.5", features=["postgres_types"] }
chrono = "0.4"
env_logger = "0.9"
log = "0.4"