[package]
name = "stdout-channel"
version = "0.6.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"
description = "Write stdout to an async queue."
license-file = "LICENSE"
homepage = "https://github.com/ddboline/stdout-channel-rs"
repository = "https://github.com/ddboline/stdout-channel-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
deadqueue = "0.2"
tokio = {version="1", features=["io-std", "io-util", "sync", "rt-multi-thread", "time"]}

[dev-dependencies]
tokio = {version="1.44", features=["rt-multi-thread", "macros"]}
stack-string = { version="0.8", features=["postgres_types"] }
time = "0.3"
env_logger = "0.11"
log = "0.4"
